# cmake_tests_kitty

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run_build.bash  run_test.bash  run_windows_build.bat
include/kitty/: .bengal.h.swp  bengal.h
src/: bengal.cpp
test/: main.cpp
